add gigs section with BandsInTown widget, update GigSalad link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="#home" class="nav-link">Home</a></li>
         <li><a href="#bio" class="nav-link">Bio</a></li>
         <li><a href="#news" class="nav-link">News</a></li>
+        <li><a href="#gigs" class="nav-link">Gigs</a></li>
         <li><a href="#media" class="nav-link">Media</a></li>
         <li><a href="#discography" class="nav-link">Discography</a></li>
         <li><a href="#gear" class="nav-link">Gear</a></li>
@@ -120,6 +121,35 @@
           <p>Excited to share that I performed as a guitarist for Disney Encanto x CAMP at the 5th Avenue CAMP Store! Shows ran through the end of January 2023.</p>
           <span class="news-tag">#DisneyEncantoxCAMP</span>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Gigs Section -->
+  <section class="section gigs-section" id="gigs">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title">Gigs</h2>
+        <div class="section-line"></div>
+      </div>
+      <div class="gigs-widget-wrapper">
+        <a class="bit-widget-initializer"
+          data-artist-name="Tony Song"
+          data-display-local-dates="false"
+          data-display-past-dates="true"
+          data-auto-style="false"
+          data-text-color="#e0d6c8"
+          data-link-color="#c9a96e"
+          data-background-color="rgba(0,0,0,0)"
+          data-display-limit="15"
+          data-link-text-color="#0a0a0a"
+          data-display-lineup="false"
+          data-display-play-my-city="true"
+          data-separator-color="rgba(201,169,110,0.15)"
+        ></a>
+      </div>
+      <div class="gigs-fallback">
+        <p>For booking inquiries, <a href="#contact">get in touch</a> or find me on <a href="https://www.gigsalad.com/tony_song" target="_blank" rel="noopener">GigSalad</a>.</p>
       </div>
     </div>
   </section>
@@ -558,7 +588,7 @@
             </a>
           </div>
           <div class="contact-badges">
-            <a href="https://gigsalad.com/tonysong" target="_blank" rel="noopener" class="badge-link">
+            <a href="https://www.gigsalad.com/tony_song" target="_blank" rel="noopener" class="badge-link">
               <span class="badge-icon">&#9733;</span> Hire me on GigSalad
             </a>
             <a href="https://soundbetter.com/profiles/702313-tony-song" target="_blank" rel="noopener" class="badge-link">
@@ -617,5 +647,6 @@
   </footer>
 
   <script src="script.js"></script>
+  <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script>
 </body>
 </html>
