add henriksen apm

--- a/index.html
+++ b/index.html
@@ -303,7 +303,8 @@
         <div class="gear-category">
           <h3 class="gear-cat-title">Amps</h3>
           <ul class="gear-list">
-            <li>&rsquo;65 RI Fender Deluxe Reverb</li>
+            <li>&rsquo;65 Reissue Fender Deluxe Reverb</li>
+            <li>Henriksen The Bud TEN</li>
           </ul>
         </div>
         <div class="gear-category">
