--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="media-panel active" id="tab-music">
         <div class="media-embed-grid">
           <div class="media-embed-card">
-            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/tonysongmusic&color=%23c9a96e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false" loading="lazy"></iframe>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/tonysongmusic/moon-river&color=%23c9a96e&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false" loading="lazy"></iframe>
             <p class="media-caption">Listen on SoundCloud</p>
           </div>
         </div>
@@ -310,10 +310,15 @@
           <h3 class="gear-cat-title">Pedals &amp; Effects</h3>
           <ul class="gear-list">
             <li>Alesis Nanoverb</li>
+            <li>Strymon blueSky Reverb</li>
             <li>Xotic RC Booster</li>
+            <li>Ibanez TS808 Tube Screamer</li>
             <li>Keeley Modded Boss SD-1</li>
-            <li>Boss DD-3</li>
-            <li>Boss RV-3</li>
+            <li>MXR Carbon Copy Analog Delay</li>
+            <li>Boss DD-3 Digital Delay</li>
+            <li>Boss RV-3 Reverb</li>
+            <li>Milestone Effects Crescent Fuzz</li>
+            <li>Boss TR-2 Tremolo</li>
             <li>Ernie Ball VP Jr.</li>
           </ul>
         </div>
@@ -583,6 +588,9 @@
             <a href="https://facebook.com/p/Tony-Song-61564428827505" target="_blank" rel="noopener" class="social-link" aria-label="Facebook">
               <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
             </a>
+            <a href="https://x.com/tonysongmusic" target="_blank" rel="noopener" class="social-link" aria-label="X (Twitter)">
+              <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+            </a>
             <a href="https://soundcloud.com/tonysongmusic" target="_blank" rel="noopener" class="social-link" aria-label="SoundCloud">
               <svg viewBox="0 0 24 24" width="24" height="24" fill="currentColor"><path d="M1.175 12.225c-.051 0-.094.046-.101.1l-.233 2.154.233 2.105c.007.058.05.098.101.098.05 0 .09-.04.099-.098l.255-2.105-.27-2.154c-.009-.06-.05-.1-.1-.1m-.899.828c-.06 0-.091.037-.104.094L0 14.479l.172 1.308c.013.06.045.094.104.094.057 0 .09-.038.104-.094l.21-1.308-.21-1.334c-.014-.057-.047-.09-.104-.09m1.79-1.065c-.067 0-.12.042-.12.12l-.217 2.37.217 2.274c0 .07.053.12.12.12s.12-.05.12-.12l.248-2.274-.248-2.37c0-.078-.053-.12-.12-.12m.899-.166c-.08 0-.14.06-.14.135l-.2 2.536.2 2.323c0 .08.06.135.14.135.075 0 .135-.06.14-.135l.225-2.323-.225-2.536c-.005-.075-.065-.135-.14-.135m.89-.12c-.09 0-.154.063-.154.148l-.18 2.656.18 2.35c0 .085.065.148.154.148.085 0 .15-.063.15-.148l.208-2.35-.208-2.656c0-.085-.065-.148-.15-.148m.93-.156c-.1 0-.172.074-.172.165l-.165 2.812.165 2.37c0 .09.072.164.172.164.095 0 .167-.074.167-.164l.19-2.37-.19-2.812c0-.09-.072-.165-.167-.165m.907-.128c-.107 0-.183.08-.183.18l-.15 2.94.15 2.39c0 .1.076.18.183.18.104 0 .18-.08.18-.18l.173-2.39-.173-2.94c0-.1-.076-.18-.18-.18m.94-.043c-.12 0-.2.09-.2.195l-.133 2.983.133 2.403c0 .107.08.195.2.195.113 0 .193-.088.193-.195l.153-2.403-.153-2.983c0-.105-.08-.195-.193-.195m.9.025c-.13 0-.214.1-.214.21l-.12 2.958.12 2.418c0 .112.084.21.214.21.127 0 .21-.098.21-.21l.14-2.418-.14-2.958c0-.11-.083-.21-.21-.21m.93.09c-.137 0-.227.105-.227.22l-.105 2.868.105 2.427c0 .118.09.22.227.22.133 0 .22-.102.22-.22l.12-2.427-.12-2.868c0-.115-.087-.22-.22-.22m.9-.025c-.148 0-.24.115-.24.235l-.09 2.893.09 2.434c0 .124.092.235.24.235.142 0 .234-.11.234-.235l.105-2.434-.105-2.893c0-.12-.092-.235-.234-.235m.94-.08c-.155 0-.25.12-.25.245l-.075 2.973.075 2.44c0 .13.095.245.25.245.15 0 .245-.115.245-.245l.09-2.44-.09-2.973c0-.125-.095-.245-.245-.245m.93.007c-.165 0-.258.13-.258.258l-.065 2.715.065 2.45c0 .135.093.258.258.258.158 0 .253-.123.253-.258l.075-2.45-.075-2.715c0-.128-.095-.258-.253-.258m2.83 1.266c-.502 0-.978.1-1.415.28-.293-3.313-3.06-5.9-6.42-5.9-.58 0-1.153.08-1.69.22-.2.053-.254.107-.254.212v11.593c0 .11.085.2.19.212h9.59c1.652 0 2.993-1.373 2.993-3.065 0-1.69-1.34-3.065-2.993-3.065"/></svg>
             </a>
@@ -636,6 +644,9 @@
           </a>
           <a href="https://facebook.com/p/Tony-Song-61564428827505" target="_blank" rel="noopener" aria-label="Facebook">
             <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+          </a>
+          <a href="https://x.com/tonysongmusic" target="_blank" rel="noopener" aria-label="X (Twitter)">
+            <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
           </a>
           <a href="https://soundcloud.com/tonysongmusic" target="_blank" rel="noopener" aria-label="SoundCloud">
             <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M1.175 12.225c-.051 0-.094.046-.101.1l-.233 2.154.233 2.105c.007.058.05.098.101.098.05 0 .09-.04.099-.098l.255-2.105-.27-2.154c-.009-.06-.05-.1-.1-.1m-.899.828c-.06 0-.091.037-.104.094L0 14.479l.172 1.308c.013.06.045.094.104.094.057 0 .09-.038.104-.094l.21-1.308-.21-1.334c-.014-.057-.047-.09-.104-.09m1.79-1.065c-.067 0-.12.042-.12.12l-.217 2.37.217 2.274c0 .07.053.12.12.12s.12-.05.12-.12l.248-2.274-.248-2.37c0-.078-.053-.12-.12-.12m.899-.166c-.08 0-.14.06-.14.135l-.2 2.536.2 2.323c0 .08.06.135.14.135.075 0 .135-.06.14-.135l.225-2.323-.225-2.536c-.005-.075-.065-.135-.14-.135m.89-.12c-.09 0-.154.063-.154.148l-.18 2.656.18 2.35c0 .085.065.148.154.148.085 0 .15-.063.15-.148l.208-2.35-.208-2.656c0-.085-.065-.148-.15-.148m.93-.156c-.1 0-.172.074-.172.165l-.165 2.812.165 2.37c0 .09.072.164.172.164.095 0 .167-.074.167-.164l.19-2.37-.19-2.812c0-.09-.072-.165-.167-.165m.907-.128c-.107 0-.183.08-.183.18l-.15 2.94.15 2.39c0 .1.076.18.183.18.104 0 .18-.08.18-.18l.173-2.39-.173-2.94c0-.1-.076-.18-.18-.18m.94-.043c-.12 0-.2.09-.2.195l-.133 2.983.133 2.403c0 .107.08.195.2.195.113 0 .193-.088.193-.195l.153-2.403-.153-2.983c0-.105-.08-.195-.193-.195m.9.025c-.13 0-.214.1-.214.21l-.12 2.958.12 2.418c0 .112.084.21.214.21.127 0 .21-.098.21-.21l.14-2.418-.14-2.958c0-.11-.083-.21-.21-.21m.93.09c-.137 0-.227.105-.227.22l-.105 2.868.105 2.427c0 .118.09.22.227.22.133 0 .22-.102.22-.22l.12-2.427-.12-2.868c0-.115-.087-.22-.22-.22m.9-.025c-.148 0-.24.115-.24.235l-.09 2.893.09 2.434c0 .124.092.235.24.235.142 0 .234-.11.234-.235l.105-2.434-.105-2.893c0-.12-.092-.235-.234-.235m.94-.08c-.155 0-.25.12-.25.245l-.075 2.973.075 2.44c0 .13.095.245.25.245.15 0 .245-.115.245-.245l.09-2.44-.09-2.973c0-.125-.095-.245-.245-.245m.93.007c-.165 0-.258.13-.258.258l-.065 2.715.065 2.45c0 .135.093.258.258.258.158 0 .253-.123.253-.258l.075-2.45-.075-2.715c0-.128-.095-.258-.253-.258m2.83 1.266c-.502 0-.978.1-1.415.28-.293-3.313-3.06-5.9-6.42-5.9-.58 0-1.153.08-1.69.22-.2.053-.254.107-.254.212v11.593c0 .11.085.2.19.212h9.59c1.652 0 2.993-1.373 2.993-3.065 0-1.69-1.34-3.065-2.993-3.065"/></svg>
